tests/ui/invalid-ident.stderr
error: `"0f"` is not a valid identifier
 --> tests/ui/invalid-ident.rs:4:8
  |
4 |     fn [<0 f>]() {}
  |        ^^^^^^^
